# scanwidth

./: .gitattributes  .gitignore  LICENSE  README  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml
code/: ZODS_generator.py
docs/: README.md
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: edge_scanwidth.rst  index.rst  node_scanwidth.rst  scanwidth.rst
experimental_results/: data_real_networks.xlsx  data_synthetic_networks.xlsx
experiments/: README.md
experiments/networks/synthetic_networks/: a_ZODS_L0020_R0010_000002.el  a_ZODS_L0020_R0010_000003.el  a_ZODS_L0020_R0010_000004.el  a_ZODS_L0020_R0010_000005.el  a_ZODS_L0020_R0010_000008.el  a_ZODS_L0020_R0010_000011.el  a_ZODS_L0020_R0010_000012.el  a_ZODS_L0020_R0010_000013.el  a_ZODS_L0020_R0010_000017.el  a_ZODS_L0020_R0010_000020.el  a_ZODS_L0020_R0010_000021.el  a_ZODS_L0020_R0010_000023.el  a_ZODS_L0020_R0010_000026.el  a_ZODS_L0020_R0010_000027.el  a_ZODS_L0020_R0010_000028.el  a_ZODS_L0020_R0010_000029.el  a_ZODS_L0020_R0010_000030.el  a_ZODS_L0020_R0010_000031.el  a_ZODS_L0020_R0010_000032.el  a_ZODS_L0020_R0010_000033.el  a_ZODS_L0020_R0010_000035.el  a_ZODS_L0020_R0010_000038.el  a_ZODS_L0020_R0010_000039.el  a_ZODS_L0020_R0010_000040.el  a_ZODS_L0020_R0010_000041.el  a_ZODS_L0020_R0010_000043.el  a_ZODS_L0020_R0010_000047.el  (+504 more)
experiments/results/: data_real_networks.xlsx
experiments/scripts/: ZODS_generator.py  compute_scanwidth.py  plotting_module.py
networks/synthetic_networks/: a_ZODS_L0020_R0010_000001.el  a_ZODS_L0020_R0010_000006.el  a_ZODS_L0020_R0010_000007.el  a_ZODS_L0020_R0010_000009.el  a_ZODS_L0020_R0010_000010.el  a_ZODS_L0020_R0010_000014.el  a_ZODS_L0020_R0010_000015.el  a_ZODS_L0020_R0010_000016.el  a_ZODS_L0020_R0010_000018.el  a_ZODS_L0020_R0010_000019.el  a_ZODS_L0020_R0010_000022.el  a_ZODS_L0020_R0010_000024.el  a_ZODS_L0020_R0010_000025.el  a_ZODS_L0020_R0010_000034.el  a_ZODS_L0020_R0010_000036.el  a_ZODS_L0020_R0010_000037.el  a_ZODS_L0020_R0010_000042.el  a_ZODS_L0020_R0010_000044.el  a_ZODS_L0020_R0010_000045.el  a_ZODS_L0020_R0010_000046.el  a_ZODS_L0020_R0010_000049.el  a_ZODS_L0020_R0010_000052.el  a_ZODS_L0020_R0010_000054.el  a_ZODS_L0020_R0010_000058.el  a_ZODS_L0020_R0010_000060.el  a_ZODS_L0020_R0010_000062.el  a_ZODS_L0020_R0010_000074.el  a_ZODS_L0020_R0010_000080.el  a_ZODS_L0020_R0010_000081.el  a_ZODS_L0020_R0010_000084.el  a_ZODS_L0020_R0010_000085.el  a_ZODS_L0020_R0010_000086.el  a_ZODS_L0020_R0010_000090.el  a_ZODS_L0020_R0010_000093.el  a_ZODS_L0020_R0010_000094.el  a_ZODS_L0020_R0010_000097.el  a_ZODS_L0020_R0010_000099.el  a_ZODS_L0020_R0020_000001.el  a_ZODS_L0020_R0020_000003.el  a_ZODS_L0020_R0020_000004.el  (+329 more)
scanwidth/: README.md  pyproject.toml
scanwidth/src/scanwidth/: __init__.py  _utils.py  dag.py  extension.py  tree_extension.py
scanwidth/src/scanwidth/edge_scanwidth/: api.py
scanwidth/src/scanwidth/edge_scanwidth/reduction/: __init__.py  config.py  reducer.py
scanwidth/src/scanwidth/edge_scanwidth/solver/: __init__.py  base.py  utils.py
scanwidth/src/scanwidth/edge_scanwidth/solver/exact/: __init__.py  exhaustive.py  three_partition.py  two_partition.py  xp.py
scanwidth/src/scanwidth/edge_scanwidth/solver/heuristic/: __init__.py  cut_splitting.py  greedy.py  random.py  simulated_annealing.py
scanwidth/src/scanwidth/node_scanwidth/: __init__.py  api.py
scanwidth/src/scanwidth/node_scanwidth/reduction/: __init__.py  config.py  reducer.py
scanwidth/src/scanwidth/node_scanwidth/solver/: __init__.py  utils.py
scanwidth/src/scanwidth/node_scanwidth/solver/exact/: __init__.py  exhaustive.py  ilp.py
scanwidth/src/scanwidth/node_scanwidth/solver/heuristic/: greedy.py  random.py  simulated_annealing.py
scanwidth/tests/: conftest.py  test_scanwidth_core.py
src/scanwidth/: __init__.py  _utils.py  scanwidth.py  tree_extension.py
tests/: test_scanwidth_core.py  test_scanwidth_dataset_regression.py
(+26 files in other folders)
