[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanwidth"
version = "0.2.2"
description = "Package for computing the edge- and node-scanwidth of a directed acyclic graph (DAG)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Niels Holtgrefe"}
]
keywords = ["graph", "dag", "scanwidth", "edge-scanwidth", "node-scanwidth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "networkx>=3.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
scipy = [
    "scipy>=1.9.0",
]
gurobi = [
    "gurobipy>=10.0.0",
]
ilp = [
    "scipy>=1.9.0",
    "gurobipy>=10.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "pydata-sphinx-theme>=0.15.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
